--- a/profile.html
+++ b/profile.html
@@ -180,12 +180,25 @@ display:block;
 
 </div>
 
-<!-- NAVIGATION -->
+<!-- NAVIGATION (UPDATED ONLY) -->
 <div class="bottomnav">
-<button onclick="location.href='feeds.html'">📰 Feeds</button>
-<button onclick="showPage('friendsPage',this)">👥 Friends</button>
-<button onclick="showPage('messagesPage',this)">💬 Messages</button>
-<button class="active" onclick="showPage('profilePage',this)">👤 Profile</button>
+
+<button onclick="location.href='feeds.html'">
+📰 Feeds
+</button>
+
+<button onclick="location.href='friends.html'">
+👥 Friends
+</button>
+
+<button onclick="location.href='message.html'">
+💬 Messages
+</button>
+
+<button class="active" onclick="location.href='profile.html'">
+👤 Profile
+</button>
+
 </div>
 
 <script type="module">
