--- a/message.html
+++ b/message.html
@@ -68,7 +68,6 @@ pointer-events:none;
 
 .listText{
 flex:1;
-min-width:0;
 }
 
 .listName{
@@ -79,9 +78,6 @@ font-weight:900;
 font-size:13px;
 color:#94a3b8;
 margin-top:3px;
-white-space:nowrap;
-overflow:hidden;
-text-overflow:ellipsis;
 }
 
 .chatBox{
@@ -118,13 +114,18 @@ background:rgba(255,255,255,0.1);
 border-bottom-left-radius:6px;
 }
 
+.time{
+font-size:10px;
+opacity:.6;
+margin-top:3px;
+}
+
 input{
 width:100%;
 padding:12px;
 border-radius:14px;
 border:1px solid rgba(255,255,255,0.15);
 margin-top:8px;
-box-sizing:border-box;
 background:rgba(255,255,255,0.05);
 color:#fff;
 }
@@ -156,10 +157,6 @@ color:#fff;
 display:flex;
 gap:10px;
 margin-top:10px;
-}
-
-.row button{
-flex:1;
 }
 
 .bottomnav{
@@ -203,9 +200,10 @@ font-weight:800;
 </div>
 
 <div id="chatSection" style="display:none;">
+
 <div class="card">
 
-<div style="display:flex;justify-content:space-between;align-items:center;">
+<div style="display:flex;justify-content:space-between;">
 <div id="chatTitle" style="font-weight:900;"></div>
 <button class="danger" id="deleteChatBtn">Delete</button>
 </div>
@@ -220,6 +218,7 @@ font-weight:800;
 </div>
 
 </div>
+
 </div>
 
 </div>
@@ -228,25 +227,14 @@ font-weight:800;
 <button onclick="location.href='feeds.html'">📰 Feeds</button>
 <button onclick="location.href='friends.html'">👥 Friends</button>
 <button class="active">💬 Messages</button>
-<button onclick="location.href='profile.html'">👤 Profile</button>
+<button onclick="location.href='app.html'">👤 Profile</button>
 </div>
 
 <script type="module">
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-import {getAuth,onAuthStateChanged} from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-import {
-getFirestore,
-collection,
-addDoc,
-query,
-orderBy,
-onSnapshot,
-doc,
-getDoc,
-deleteDoc,
-where
-} from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+import { getAuth,onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+import { getFirestore,collection,addDoc,query,orderBy,onSnapshot,doc,deleteDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -260,10 +248,11 @@ const db=getFirestore(app);
 
 let currentEmail=null;
 let currentChat=null;
+let chatUserEmail=null;
 
-function chatId(a,b){
-return [a,b].sort().join("__");
-}
+const chatList=document.getElementById("chatList");
+const chatSection=document.getElementById("chatSection");
+const messagesBox=document.getElementById("messagesBox");
 
 onAuthStateChanged(auth,(user)=>{
 if(!user){
@@ -273,43 +262,41 @@ return;
 
 currentEmail=user.email.toLowerCase();
 
-loadChatList();
+listenChats();
 
-const params=new URLSearchParams(location.search);
-const friend=params.get("user");
-
-if(friend){
-openChat(friend);
-}
 });
 
-function loadChatList(){
+function chatId(a,b){
+return [a,b].sort().join("_");
+}
+
+function listenChats(){
 
 const q=query(collection(db,"messages"),orderBy("createdAt"));
 
 onSnapshot(q,(snap)=>{
 
-chatList.innerHTML="";
-
-let chats={};
+const chats={};
 
 snap.forEach(docSnap=>{
-
 const d=docSnap.data();
-const id=d.chatId;
 
-if(!id.includes(currentEmail)) return;
+if(d.from!==currentEmail && d.to!==currentEmail) return;
 
-chats[id]=d;
+const other=d.from===currentEmail?d.to:d.from;
+
+chats[other]=d;
 
 });
 
-for(const id in chats){
+chatList.innerHTML="";
 
-const other=id.replace(currentEmail,"").replace("__","");
+for(const email in chats){
+
+const last=chats[email];
 
 chatList.innerHTML+=`
-<div class="card chatListItem" onclick="openChat('${other}')">
+<div class="card chatListItem" onclick="openChat('${email}')">
 
 <div class="listRow">
 
@@ -319,8 +306,8 @@ chatList.innerHTML+=`
 </div>
 
 <div class="listText">
-<div class="listName">${other}</div>
-<div class="listSub">${chats[id].text}</div>
+<div class="listName">${email}</div>
+<div class="listSub">${last.text}</div>
 </div>
 
 </div>
@@ -336,23 +323,14 @@ chatList.innerHTML+=`
 
 window.openChat=function(email){
 
+chatUserEmail=email;
 currentChat=chatId(currentEmail,email);
 
 chatTitle.innerText=email;
 
 chatSection.style.display="block";
 
-loadMessages();
-
-};
-
-function loadMessages(){
-
-const q=query(
-collection(db,"messages"),
-where("chatId","==",currentChat),
-orderBy("createdAt")
-);
+const q=query(collection(db,"messages"),orderBy("createdAt"));
 
 onSnapshot(q,(snap)=>{
 
@@ -362,12 +340,26 @@ snap.forEach(docSnap=>{
 
 const d=docSnap.data();
 
-const cls=d.from===currentEmail?"me":"other";
+if(d.chatId!==currentChat) return;
+
+const me=d.from===currentEmail;
+
+const time=new Date(d.createdAt).toLocaleTimeString([],{
+hour:'2-digit',
+minute:'2-digit'
+});
 
 messagesBox.innerHTML+=`
-<div class="message ${cls}">
-<div class="bubble">${d.text}</div>
+
+<div class="message ${me?'me':'other'}">
+
+<div class="bubble">
+${d.text}
+<div class="time">${time}</div>
 </div>
+
+</div>
+
 `;
 
 });
@@ -384,10 +376,13 @@ const text=messageInput.value.trim();
 if(!text) return;
 
 await addDoc(collection(db,"messages"),{
+
 chatId:currentChat,
 from:currentEmail,
+to:chatUserEmail,
 text:text,
 createdAt:Date.now()
+
 });
 
 messageInput.value="";
@@ -395,17 +390,29 @@ messageInput.value="";
 };
 
 closeBtn.onclick=()=>{
+
 chatSection.style.display="none";
+
 };
 
 deleteChatBtn.onclick=async()=>{
 
-const q=query(collection(db,"messages"),where("chatId","==",currentChat));
+if(!confirm("Delete chat?")) return;
+
+const q=query(collection(db,"messages"));
 
 onSnapshot(q,(snap)=>{
-snap.forEach(async d=>{
-await deleteDoc(doc(db,"messages",d.id));
+
+snap.forEach(async docSnap=>{
+
+if(docSnap.data().chatId===currentChat){
+
+await deleteDoc(doc(db,"messages",docSnap.id));
+
+}
+
 });
+
 });
 
 chatSection.style.display="none";
