--- a/message.html
+++ b/message.html
@@ -227,7 +227,7 @@ font-weight:800;
 <button onclick="location.href='feeds.html'">📰 Feeds</button>
 <button onclick="location.href='friends.html'">👥 Friends</button>
 <button class="active">💬 Messages</button>
-<button onclick="location.href='app.html'">👤 Profile</button>
+<button onclick="location.href='profile.html'">👤 Profile</button>
 </div>
 
 <script type="module">
