--- a/message.html
+++ b/message.html
@@ -6,6 +6,7 @@
 <title>SeaConnect - Messages</title>
 
 <style>
+
 body{
 margin:0;
 font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
@@ -102,6 +103,12 @@ background:rgba(255,255,255,0.1);
 border-bottom-left-radius:6px;
 }
 
+.chatPhoto{
+max-width:200px;
+border-radius:12px;
+margin-top:5px;
+}
+
 .time{
 font-size:10px;
 opacity:.6;
@@ -175,6 +182,7 @@ color:#94a3b8;
 color:#3b82f6;
 font-weight:800;
 }
+
 </style>
 </head>
 
@@ -199,6 +207,8 @@ font-weight:800;
 <div id="messagesBox" class="chatBox"></div>
 
 <input id="messageInput" placeholder="Type message...">
+
+<input type="file" id="photoInput" accept="image/*">
 
 <div class="row">
 <button class="primary" id="sendBtn">Send</button>
@@ -231,7 +241,8 @@ orderBy,
 onSnapshot,
 doc,
 getDoc,
-deleteDoc
+deleteDoc,
+updateDoc
 } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
@@ -244,6 +255,8 @@ const app=initializeApp(firebaseConfig);
 const auth=getAuth(app);
 const db=getFirestore(app);
 
+const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
+
 let currentEmail=null;
 let currentChat=null;
 let chatUserEmail=null;
@@ -251,7 +264,6 @@ let isSending=false;
 
 const chatList=document.getElementById("chatList");
 const messagesBox=document.getElementById("messagesBox");
-const chatSection=document.getElementById("chatSection");
 
 function chatId(a,b){
 return [a,b].sort().join("_");
@@ -267,8 +279,6 @@ return;
 currentEmail=user.email.toLowerCase();
 
 listenChats();
-
-/* open chat from friends */
 
 const params=new URLSearchParams(window.location.search);
 const openUser=params.get("user");
@@ -306,10 +316,12 @@ for(const email in chats){
 const last=chats[email];
 
 let name=email.split("@")[0];
+let photo="https://i.ibb.co/2kRZ7Z6/avatar.png";
 
 try{
 const userSnap=await getDoc(doc(db,"users",email));
 name=userSnap.data()?.name || name;
+photo=userSnap.data()?.photo || photo;
 }catch{}
 
 chatList.innerHTML+=`
@@ -319,13 +331,13 @@ chatList.innerHTML+=`
 <div class="listRow">
 
 <div class="avatarWrapper">
-<img src="https://i.ibb.co/2kRZ7Z6/avatar.png">
+<img src="${photo}">
 <div class="onlineRing"></div>
 </div>
 
 <div class="listText">
 <div class="listName">${name}</div>
-<div class="listSub">${last.text}</div>
+<div class="listSub">${last.text || "Photo"}</div>
 </div>
 
 </div>
@@ -377,8 +389,13 @@ messagesBox.innerHTML+=`
 <div class="message ${me?'me':'other'}">
 
 <div class="bubble">
-${d.text}
+
+${d.text?d.text:""}
+
+${d.photo?`<img src="${d.photo}" class="chatPhoto">`:""}
+
 <div class="time">${time}</div>
+
 </div>
 
 </div>
@@ -398,37 +415,56 @@ sendBtn.onclick=async()=>{
 if(isSending) return;
 
 const text=messageInput.value.trim();
-if(!text) return;
+const file=photoInput.files[0];
+
+if(!text && !file) return;
 
 isSending=true;
 
-/* instant message bubble */
+let photoURL="";
 
-const time=new Date().toLocaleTimeString([],{
-hour:'2-digit',
-minute:'2-digit'
-});
+if(file){
 
-messagesBox.innerHTML+=`
-<div class="message me">
-<div class="bubble">
-${text}
-<div class="time">${time}</div>
-</div>
-</div>
-`;
+photoURL=URL.createObjectURL(file);
 
-messagesBox.scrollTop=messagesBox.scrollHeight;
+}
 
-await addDoc(collection(db,"messages"),{
+const msgRef=await addDoc(collection(db,"messages"),{
+
 chatId:currentChat,
 from:currentEmail,
 to:chatUserEmail,
 text:text,
+photo:photoURL,
 createdAt:Date.now()
+
 });
 
 messageInput.value="";
+photoInput.value="";
+
+if(file){
+
+const formData=new FormData();
+formData.append("image",file);
+
+const res=await fetch(
+"https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
+{method:"POST",body:formData}
+);
+
+const data=await res.json();
+
+if(data.success){
+
+await updateDoc(doc(db,"messages",msgRef.id),{
+photo:data.data.url
+});
+
+}
+
+}
+
 isSending=false;
 
 };
@@ -448,7 +484,9 @@ onSnapshot(q,(snap)=>{
 snap.forEach(async docSnap=>{
 
 if(docSnap.data().chatId===currentChat){
+
 await deleteDoc(doc(db,"messages",docSnap.id));
+
 }
 
 });
