--- a/message.html
+++ b/message.html
@@ -241,6 +241,7 @@ orderBy,
 onSnapshot,
 doc,
 getDoc,
+getDocs,
 deleteDoc,
 updateDoc
 } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
@@ -336,7 +337,6 @@ chatList.innerHTML="";
 for(const email in chats){
 
 const last=chats[email];
-
 const profile=await getUserProfile(email);
 
 chatList.innerHTML+=`
